# aws_cli_mcp

./: .env.template  .pre-commit-config.yaml  CHANGELOG.md  README.md  pre_commit_config.yaml  pyproject.toml  tools.json  xunit-result.xml
src/application/interfaces/: cli.py
src/application/services/: __init__.py  chat_service.py
src/domain/: __init__.py  schemas.py  utils.py
src/domain/tools/: __init__.py  base_tool.py  s3.py
src/infrastructure/aws/: __init__.py  s3_uow.py
src/infrastructure/llm/: __init__.py  azure_openai_uow.py  base_llm.py
src/infrastructure/mcp/: __init__.py  client.py
tests/application/interfaces/: test_cli.py
tests/application/services/: test_chat_service.py
tests/domain/tools/: test_base_tool.py  test_s3.py
tests/infrastructure/aws/: test_s3_uow.py
tests/infrastructure/llm/: test_azure_openai_uow.py  test_base_llm.py
tests/infrastructure/mcp/: test_client.py
