[project]
name = "aws-mcp"
version = "0.1.0"
description = "Application to provide methods to communicate AWS with MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.30",
    "fastmcp>=2.12.3",
    "openai>=1.107.2",
    "python-dotenv>=1.1.1",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
    "ruff>=0.6.8",
    "poethepoet>=0.28.0",
]

[tool.poe.tasks]
# Install all project dependencies (including dev if you have a uv lockfile with dev deps)
install = { cmd = "uv sync" }

# Install git hooks so they run automatically on commit
pre-commit-install = { cmd = "uv run pre-commit install" }

# Manually run all hooks against the entire repo (useful for CI or first run)
pre-commit-run = { cmd = "uv run pre-commit run --all-files" }

# Run the test suite (fast, minimal output)
tests = { cmd = "uv run pytest -q" }

# Run tests with coverage (prints missing lines)
coverage = { cmd = "uv run pytest --maxfail=1 --disable-warnings --cov=src --cov-report=term-missing" }

# Optional: a convenience task to set up everything at once
setup = { sequence = ["install", "pre-commit-install", "pre-commit-run"], help = "Install deps, set up hooks, lint all files once" }
